--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container home">
+	<div class="container home mt-5">
 		<div class="jumbotron text-center p-4 w-75 mt-2">
 			<h1 class="display-4">Bienvenue sur notre site en construction</h1>
 			<p class="lead">Nous travaillons activement à la création de notre nouveau site web.</p>
