--- a/templates/planning/edit.html.twig
+++ b/templates/planning/edit.html.twig
@@ -4,8 +4,8 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container mt-5">
-		<div class="col-md-12 w-50 mx-auto">
+	<div class="container edit-planning mt-5">
+		<div class="col col-md-12 mx-auto">
 			<div class="card">
 				<div class="card-body">
 					<h1>Modifier le Planning</h1>
