--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -32,10 +32,10 @@
 			{% if prevDate >= startOfCurrentWeek %}
 				<a href="{{ path('calendar', { 'year': prevYear, 'week': prevWeek }) }}" class="btn btn-general">&laquo;</a>
 			{% else %}
-				<button class="btn btn-general desktop" disabled>&laquo;</button>
+				<button class="btn btn-general" disabled>&laquo;</button>
 			{% endif %}
-			<a href="{{ path('calendar', { 'year': 'now'|date('Y'), 'week': 'now'|date('W') }) }}" class="btn reserve-btn desktop">Semaine en cours</a>
-			<a href="{{ path('calendar', { 'year': nextYear, 'week': nextWeek }) }}" class="btn btn-general desktop">&raquo;</a>
+			<a href="{{ path('calendar', { 'year': 'now'|date('Y'), 'week': 'now'|date('W') }) }}" class="btn reserve-btn">Semaine en cours</a>
+			<a href="{{ path('calendar', { 'year': nextYear, 'week': nextWeek }) }}" class="btn btn-general">&raquo;</a>
 			<a href="{{ path('user_subscription') }}" class="btn btn-general">Mes forfaits</a>
 			<a href="{{ path('booking_manage') }}" class="btn btn-general">Gérer mes réservations</a>
 			{% if is_granted('ROLE_ADMIN') %}
