--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -512,6 +512,12 @@ footer.footer p {
 	max-width: 50%;
 }
 
+.week-day {
+	text-align: center;
+	color: #225f6e !important;
+	font-size: 18px !important;
+}
+
 @media screen and (max-width: 1500px) {
 	.table th,
 	.table td {
@@ -532,6 +538,10 @@ footer.footer p {
 
 	.switch {
 		min-width: 25px;
+	}
+
+	.more, .less {
+		min-width: 15px;
 	}
 
 	.jumbotron {
@@ -571,9 +581,9 @@ footer.footer p {
 
 	.table th,
 	.table td {
-		font-size: 10px !important; /* Réduire la taille de la police */
-		padding: 5px !important; /* Réduire l'espacement */
-		min-width: 60px !important;
+		font-size: 8px !important; /* Réduire la taille de la police */
+		padding: 5px 3px !important; /* Réduire l'espacement */
+		min-width: 30px !important;
 		max-height: 200px;
 	}
 
@@ -601,7 +611,7 @@ footer.footer p {
 	.calendrier p,
 	.calendrier button,
 	.calendrier th {
-		font-size: 10px !important;
+		font-size: 8px !important;
 	}
 
 	.calendrier .btn {
@@ -689,7 +699,7 @@ footer.footer p {
 
 	.mobile .table th,
 	.mobile .table td {
-		padding: 5px;
+		padding: 3px;
 	}
 
 	.planning .mobile a,
@@ -707,21 +717,25 @@ footer.footer p {
 		text-align: center;
 	}
 
-	.calendrier .col-3 {
+	.calendrier .col-3, .planning .col-3 {
 		margin-bottom: 10px;
 		padding-left: 0px;
 		padding-right: 0px;
 	}
 
-	.calendrier .col-9 {
+	.calendrier .col-9, .planning .col-9 {
 		padding-bottom: 0;
 		padding-left: 0px;
 		padding-right: 0px;
 	}
 
-	.calendrier .row {
-		padding-left: 12px;
-		padding-right: 12px;
+	.calendrier .row, .planning .row {
+		padding-left: 3px;
+		padding-right: 3px;
+	}
+
+	.hide-date {
+		display: none;
 	}
 }
 
