--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -451,7 +451,7 @@ textarea.form-control {
 	bottom: 20px;
 	right: 20px;
 	display: none;
-	background-color: #2c7487;
+	background-color: #2c73879a;
 	color: #fff;
 	padding: 10px 15px;
 	border-radius: 5px;
@@ -610,11 +610,15 @@ footer.footer p {
 	.calendrier a,
 	.calendrier p,
 	.calendrier button,
-	.calendrier th {
+	.calendrier th,
+	.planning a,
+	.planning p,
+	.planning button,
+	.planning th {
 		font-size: 8px !important;
 	}
 
-	.calendrier .btn {
+	.calendrier .btn, .planning .btn {
 		font-size: 8px !important;
 		padding: 5px 3px !important;
 	}
