--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -621,6 +621,7 @@ footer.footer p {
 	.calendrier .btn, .planning .btn {
 		font-size: 8px !important;
 		padding: 5px 3px !important;
+		margin-top: 5px !important;
 	}
 
 	.contact .col {
@@ -734,8 +735,8 @@ footer.footer p {
 	}
 
 	.calendrier .row, .planning .row {
-		padding-left: 3px;
-		padding-right: 3px;
+		padding-left: 12px;
+		padding-right: 12px;
 	}
 
 	.hide-date {
