--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -151,7 +151,7 @@
 															{% endif %}
 														{% endif %}
 														{% if is_granted('ROLE_ADMIN') %}
-															<div class="mt-2">
+															<div>
 																<a href="{{ path('course_edit', { 'id': course.id }) }}" class="btn update btn-sm">Modifier</a>
 																<form action="{{ path('admin_course_cancel', { 'courseId': course.id }) }}" method="POST" class="d-inline-block" onsubmit="return confirm('Êtes-vous sûr de vouloir annuler ce cours ?');">
 																	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ course.id) }}">
