--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -518,6 +518,13 @@ footer.footer p {
 	font-size: 18px !important;
 }
 
+.booking-username {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	margin-bottom: 5px;
+}
+
 @media screen and (max-width: 1500px) {
 	.table th,
 	.table td {
@@ -540,7 +547,8 @@ footer.footer p {
 		min-width: 25px;
 	}
 
-	.more, .less {
+	.more,
+	.less {
 		min-width: 15px;
 	}
 
@@ -618,7 +626,8 @@ footer.footer p {
 		font-size: 8px !important;
 	}
 
-	.calendrier .btn, .planning .btn {
+	.calendrier .btn,
+	.planning .btn {
 		font-size: 8px !important;
 		padding: 5px 3px !important;
 		margin-top: 5px !important;
@@ -722,19 +731,22 @@ footer.footer p {
 		text-align: center;
 	}
 
-	.calendrier .col-3, .planning .col-3 {
+	.calendrier .col-3,
+	.planning .col-3 {
 		margin-bottom: 10px;
 		padding-left: 0px;
 		padding-right: 0px;
 	}
 
-	.calendrier .col-9, .planning .col-9 {
+	.calendrier .col-9,
+	.planning .col-9 {
 		padding-bottom: 0;
 		padding-left: 0px;
 		padding-right: 0px;
 	}
 
-	.calendrier .row, .planning .row {
+	.calendrier .row,
+	.planning .row {
 		padding-left: 0;
 		padding-right: 0;
 		margin-left: 0;
