--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,14 +8,12 @@
 		<div class="jumbotron text-center p-4 w-75 mt-2">
 			<h1 class="display-4">Bienvenue sur notre site en construction</h1>
 			<p class="lead">Nous travaillons activement à la création de notre nouveau site web.</p>
-			<hr
-			class="my-4">
-		{# <p>Les réservations seront bientôt disponnible, merci de ne pas réserver pour le moment :) #}
-		</p>
-		<p>Vous ne pouvez réservez pour le moment.</p>
-		<p>Cela arrivera prochainement</p>
-		{# <p>Malgré cela, vous pouvez dès maintenant réserver vos cours via notre <a class="reserve" href="{{ path('calendar') }}"> calendrier en ligne.</a></p>
-					<a class="btn btn-general btn-lg" href="{{ path('calendar') }}" role="button">Accéder au Calendrier et Réserver</a>
-					<p class="mt-4">Restez à l'écoute pour plus de fonctionnalités à venir bientôt !</p> #}
+			<hr class="my-4">
+			<p>Les réservations seront bientôt disponnible, merci de ne pas réserver pour le moment :)
+			</p>
+			{# <p>Malgré cela, vous pouvez dès maintenant réserver vos cours via notre <a class="reserve" href="{{ path('calendar') }}"> calendrier en ligne.</a></p>
+								<a class="btn btn-general btn-lg" href="{{ path('calendar') }}" role="button">Accéder au Calendrier et Réserver</a>
+								<p class="mt-4">Restez à l'écoute pour plus de fonctionnalités à venir bientôt !</p> #}
+		</div>
 	</div>
-</div>{% endblock %}
+{% endblock %}
